[project]
name = "mcp-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "fastmcp>=2.11.2",
    "llama-index-core>=0.13.0",
    "llama-index-embeddings-openai>=0.5.0",
    "llama-index-llms-openai>=0.5.0",
    "llama-index-vector-stores-pinecone>=0.7.0",
    "markdownify>=1.1.0",
    "pillow>=11.3.0",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.1.1",
    "readabilipy>=0.3.0",
    "openai>=1.37.0",
    "upstash-redis>=1.0.0",
]
